--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-limiter": "^1.6.1",
     "express-status-monitor": "^1.3.3",
     "helmet": "^3.22.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^6.4.4",
